--- a/Making.html
+++ b/Making.html
@@ -5,49 +5,54 @@
     <title>Swith</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="Making.js"></script>
+    <meta charset="utf-8" />
     <link rel="stylesheet" href="Making.css" type="text/css">
 </head>
 
 <body>
-    <header>
-        <div id="header_container">
-            <div class="item1">
-                <a href="#">&lt; 돌아가기</a>
-            </div>
-            <div class="item2">
-                <input type="text" name="title" id="title" placeholder="제목을 입력하세요" onfocus="$('.basic').show();" autofocus />
-            </div>
-        </div>
-    </header>
+   
     <div class="main_container">
         <div class="voca_feild">
-            <table>
-                <tr>
-                    <td>
-                        <div class="voca">
-                            <form action="./Making.php" method="POST">
+            <form action="Making.php" method="post">
+                <header>
+                    <div id="header_container">
+                        <div class="item1">
+                            <a href="#">&lt; 돌아가기</a>
+                        </div>
+                        <div class="item2">
+                            <input type="text" name="title" id="title" placeholder="제목을 입력하세요" onfocus="$('.basic').show();"
+                                autofocus />
+                        </div>
+                    </div>
+                </header>
+                <table>
+                    <tr>
+                        <td>
+                            <div class="voca_feild">
                                 <ul style="display:block;" class="list">
-                                    <li> <!-- 읽기 전용으로 만들어서 나머지 li태그와 균형을 맞춘다. -->
+                                    <li>
+                                        <!-- 읽기 전용으로 만들어서 나머지 li태그와 균형을 맞춘다. -->
                                         <span>&emsp;&nbsp;</span> <!-- 3칸 공백 + 1칸 공백을 삽입하여 밑에 input태그의 위치를 맞춰준다. -->
-                                        <input type="text" value="단어" class="hidden_text" readonly> 
+                                        <input type="text" value="단어" class="hidden_text" readonly>
                                         <input type="text" value="의미" class="hidden_text" readonly>
                                     </li>
-                                    <li> <!-- input태그를 클릭할 시 모든 li태그의 하위 태그인 .addMinus를 숨기고, 해당 input태그의 부모인 div를 찾아 보여준다. -->
+                                    <li>
+                                        <!-- input태그를 클릭할 시 모든 li태그의 하위 태그인 .addMinus를 숨기고, 해당 input태그의 부모인 div를 찾아 보여준다. -->
                                         <span class="num">001</span>
-                                        <input type="text" name="voca" class="basic_input"
+                                        <input type="text" name="voca[]" class="basic_input"
                                             onfocus="$('.addMinus').hide(); $(this).parent().find('div').show();" />
-                                        <input type="text" name="mean"
+                                        <input type="text" name="mean[]"
                                             onfocus="$('.addMinus').hide(); $(this).parent().find('div').show();" />
-                                        <div class="addMinus basic" >
+                                        <div class="addMinus basic">
                                             <button type="button" class="add" value="+">+</button>
                                             <button type="button" class="minus" value="-">&#8211;</button>
                                         </div>
                                     </li>
                                     <li>
                                         <span class="num">002</span>
-                                        <input type="text" name="voca"
+                                        <input type="text" name="voca[]"
                                             onfocus="$('.addMinus').hide(); $(this).parent().find('div').show();" />
-                                        <input type="text" name="mean"
+                                        <input type="text" name="mean[]"
                                             onfocus="$('.addMinus').hide(); $(this).parent().find('div').show();" />
                                         <div class="addMinus">
                                             <button type="button" class="add" value="+">+</button>
@@ -56,9 +61,9 @@
                                     </li>
                                     <li>
                                         <span class="num">003</span>
-                                        <input type="text" name="voca"
+                                        <input type="text" name="voca[]"
                                             onfocus="$('.addMinus').hide(); $(this).parent().find('div').show();" />
-                                        <input type="text" name="mean"
+                                        <input type="text" name="mean[]"
                                             onfocus="$('.addMinus').hide(); $(this).parent().find('div').show();" />
                                         <div class="addMinus">
                                             <button type="button" class="add" value="+">+</button>
@@ -67,9 +72,9 @@
                                     </li>
                                     <li>
                                         <span class="num">004</span>
-                                        <input type="text" name="voca"
+                                        <input type="text" name="voca[]"
                                             onfocus="$('.addMinus').hide(); $(this).parent().find('div').show();" />
-                                        <input type="text" name="mean"
+                                        <input type="text" name="mean[]"
                                             onfocus="$('.addMinus').hide(); $(this).parent().find('div').show();" />
                                         <div class="addMinus">
                                             <button type="button" class="add" value="+">+</button>
@@ -78,9 +83,9 @@
                                     </li>
                                     <li>
                                         <span class="num">005</span>
-                                        <input type="text" name="voca"
+                                        <input type="text" name="voca[]"
                                             onfocus="$('.addMinus').hide(); $(this).parent().find('div').show();" />
-                                        <input type="text" name="mean"
+                                        <input type="text" name="mean[]"
                                             onfocus="$('.addMinus').hide(); $(this).parent().find('div').show();" />
                                         <div class="addMinus">
                                             <button type="button" class="add" value="+">+</button>
@@ -89,9 +94,9 @@
                                     </li>
                                     <li>
                                         <span class="num">006</span>
-                                        <input type="text" name="voca"
+                                        <input type="text" name="voca[]"
                                             onfocus="$('.addMinus').hide(); $(this).parent().find('div').show();" />
-                                        <input type="text" name="mean"
+                                        <input type="text" name="mean[]"
                                             onfocus="$('.addMinus').hide(); $(this).parent().find('div').show();" />
                                         <div class="addMinus">
                                             <button type="button" class="add" value="+">+</button>
@@ -100,9 +105,9 @@
                                     </li>
                                     <li>
                                         <span class="num">007</span>
-                                        <input type="text" name="voca"
+                                        <input type="text" name="voca[]"
                                             onfocus="$('.addMinus').hide(); $(this).parent().find('div').show();" />
-                                        <input type="text" name="mean"
+                                        <input type="text" name="mean[]"
                                             onfocus="$('.addMinus').hide(); $(this).parent().find('div').show();" />
                                         <div class="addMinus">
                                             <button type="button" class="add" value="+">+</button>
@@ -111,9 +116,9 @@
                                     </li>
                                     <li>
                                         <span class="num">008</span>
-                                        <input type="text" name="voca"
+                                        <input type="text" name="voca[]"
                                             onfocus="$('.addMinus').hide(); $(this).parent().find('div').show();" />
-                                        <input type="text" name="mean"
+                                        <input type="text" name="mean[]"
                                             onfocus="$('.addMinus').hide(); $(this).parent().find('div').show();" />
                                         <div class="addMinus">
                                             <button type="button" class="add" value="+">+</button>
@@ -121,18 +126,14 @@
                                         </div>
                                     </li>
                                 </ul>
-                            </form>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="btn">
-                            <button type="submit" name="save" id="save_btn">저장하기</button>
-                        </div>
-                    </td>
-                </tr>
-            </table>
+                                <div class="btn">
+                                    <button type="submit" name="save" id="save_btn">저장하기</button>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </form>
         </div>
     </div>
 </body>
